# PL-ASD

./: .gitignore  README.md
PL 2 sesión 2.2/: p2_1_ej1_servidor_eco.py
PL 2 sesión 2.2/PL 2 sesion 2.2/: apuntes  p2_1_eje1_servidor_eco.py
PRACTICAS_DE_LABORATORIO/SESION_2/SESION_2_1/: p2_1_ej1_servidor_eco.py  p2_1_ej2_servidor_eco.py  p2_1_ej3_servidor_eco.py  p2_1_ej4_servidor_prefork.py  p2_1_ej5_servidor_fork.py
PRACTICAS_DE_LABORATORIO/SESION_2/SESION_2_2/: p2_2_ej1_servidor_hilos.py  p2_2_ej2_servidor_pool_hilos.py
PRACTICAS_DE_LABORATORIO/SESION_2/SESION_2_3/: p2_3_ej1_servidor_select.py  p2_3_ej2_servidor_selectors.py  p2_3_ej3opc_servidor_selectors_dos_sockets.py  p2_3_ej4opc_selectors_eco_multiple.py  p2_3_ej5_echo_asyncio.py
PRACTICAS_DE_LABORATORIO/SESION_2/SESION_2_4/: p2_4_ej0_juego_iterativo.py  p2_4_ej1_juego_hilos.py  p2_4_ej2_juego_asyncio.py  p2_4_ej3_juego_selectors.py
PRACTICAS_DE_LABORATORIO/SESION_2/SESION_2_5/: p2_5_ej1_chat_async.py  p2_5_ej2_broker.py  p2_5_ej3opc_broker_async.py  p2_5_ej4_chat_con_broker.py  p2_5_ej5opc_chat_redis.py  p2_5_ej6opc_chat_redis_pubsub.py
PRACTICAS_DE_LABORATORIO/SESION_3/SESION_3_1/P3.1/: bajar_farmacias.py  datos.xml  debug_tablas.py  farmacias.json  farmacias_gps.json  farmacias_scrapy.json  (+13 more)
PRACTICAS_DE_LABORATORIO/SESION_3/SESION_3_3/todo-api/: cliente1.py  cliente2.py  p3_3opc_ej1_seguridad.py  p3_3opc_ej2_websockets.py  pyproject.toml  tareas.db
PRACTICAS_DE_LABORATORIO/SESION_4/SESION_4_1/: .gitignore  Dockerfile  Dockerfile.echo  docker-compose.yaml  echo_server.py  hola.py  prueba.py
(+8 files in other folders)
