[project]
name = "todo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.3",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlmodel>=0.0.38",
]
